add font Titillium Web

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -62,9 +62,36 @@ import Text from "../components/Text.astro";
           <a
             class="underline underline-offset-2"
             href="https://www.tiktok.com/@hojskolendk?is_from_webapp=1&sender_device=pc"
-            >Tiktok ↗</a>
+            >Tiktok ↗</a
+          >
         </li>
       </ul>
+    </div>
+
+    <!-- Samarbejdspartnere -->
+    <div class="col-span-12">
+      <Heading htmlheading="h4" size="h4" stylingclasses="mb-3"
+        >Samarbejdspartnere</Heading
+      >
+      <div class="flex flex-wrap items-center gap-6">
+        <!-- Erstat src med rigtige logoer -->
+        <img
+          class="h-auto"
+          src="/svg/samarbejdspartnere.svg"
+          alt="Samarbejdspartnere"
+        />
+      </div>
+    </div>
+
+    <!-- Stor wordmark -->
+    <div class="col-span-12 pt-6">
+      <Heading
+        htmlheading="div"
+        size="h1"
+        stylingclasses="text-[56px] leading-none font-bold tracking-tight"
+      >
+        HÖJSKOLENDK
+      </Heading>
     </div>
   </div>
 </footer>
