--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -333,7 +333,7 @@ import BlogPostCard2 from "../components/BlogPostCard2.astro";
       <Heading
         size="h4"
         htmlheading="h4"
-        stylingclasses="text-dark-grey pt-10 lg:row-start-2 lg:rox-end-3 lg:col-start-1 lg:col-end-7"
+        stylingclasses="text-dark-grey pt-10 pb-2 lg:pb-0 lg:row-start-2 lg:rox-end-3 lg:col-start-1 lg:col-end-7"
         >Mest læste</Heading
       >
       <BlogPostCard1
@@ -348,7 +348,7 @@ import BlogPostCard2 from "../components/BlogPostCard2.astro";
       <Heading
         size="h4"
         htmlheading="h4"
-        stylingclasses="text-dark-grey pt-2 lg:row-start-2 lg:col-start-7 lg:col-end-13 lg:pt-10"
+        stylingclasses="text-dark-grey pt-2 pb-2 lg:pb-0 lg:row-start-2 lg:col-start-7 lg:col-end-13 lg:pt-10"
         >Nyeste indlæg</Heading
       >
       <BlogPostCard2
