add Stefan's code and add img

--- a/src/pages/test.astro
+++ b/src/pages/test.astro
@@ -8,10 +8,14 @@ import Text from "../components/Text.astro";
 import Button from "../components/Button.astro";
 import ReviewCard from "../components/ReviewCard.astro";
 import Footer from "../components/Footer.astro";
+import Hero from "../components/Hero.astro";
 ---
 
 <MainLayout title="Titel">
   <main>
+    <section>
+      <Hero />
+    </section>
     <section>
       <Button variant="primary">Primary Button</Button>
       <Button variant="secondary">Secondary Button</Button>
