--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -103,10 +103,27 @@ import PopularCard from "../components/PopularCard.astro";
         stylingclasses="border-b-1 border-black pb-4 mx-4 mb-10 lg:col-start-1 lg:col-end-13"
         >Populære rejser</Heading
       >
-      <div>
-        <div>
+      <div
+        class="w-[100dvw] overflow-x-auto snap-x snap-mandatory
+         [-ms-overflow-style:none] [scrollbar-width:none] [&::-webkit-scrollbar]:hidden"
+      >
+        <div class="flex flex-row gap-0 lg:px-0">
           <PopularCard
             img="/img/rejse1.webp"
+            days="60"
+            destination="Brasilien, Mexico, Costa Rica, & Colombia"
+            price="57.900"
+            text="Oplev farverige kulturer, tropiske regnskove og pulserende byer, mens du rejser gennem Mexico, Costa Rica og Colombia. Tre lande, uendelige oplevelser – klar til at skabe minder for livet."
+          />
+          <PopularCard
+            img="/img/rejse2.webp"
+            days="60"
+            destination="Brasilien, Mexico, Costa Rica, & Colombia"
+            price="57.900"
+            text="Oplev farverige kulturer, tropiske regnskove og pulserende byer, mens du rejser gennem Mexico, Costa Rica og Colombia. Tre lande, uendelige oplevelser – klar til at skabe minder for livet."
+          />
+          <PopularCard
+            img="/img/rejse3.webp"
             days="60"
             destination="Brasilien, Mexico, Costa Rica, & Colombia"
             price="57.900"
