--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -96,7 +96,7 @@ import PopularCard from "../components/PopularCard.astro";
         />
       </div>
     </section>
-    <section id="popular">
+    <section id="popular" class="pb-20 lg:pb-25">
       <Heading
         size="h1"
         htmlheading="h1"
@@ -117,19 +117,22 @@ import PopularCard from "../components/PopularCard.astro";
           />
           <PopularCard
             img="/img/rejse2.webp"
-            days="60"
-            destination="Brasilien, Mexico, Costa Rica, & Colombia"
-            price="57.900"
-            text="Oplev farverige kulturer, tropiske regnskove og pulserende byer, mens du rejser gennem Mexico, Costa Rica og Colombia. Tre lande, uendelige oplevelser – klar til at skabe minder for livet."
+            days="90"
+            destination="HAWAII, AUSTRALIEN, JAPAN, BALI & GILI ISLANDS"
+            price="85.499"
+            text="Fra New Yorks skylines til Balis palmer – denne jordomrejse samler det bedste fra hele verden. Oplev Hawaiis vulkaner, Australiens surf, Japans kultur og livet i paradiset Gili Islands. Et episk eventyr fyldt med kontraster, fællesskab og frihed."
           />
           <PopularCard
             img="/img/rejse3.webp"
-            days="60"
-            destination="Brasilien, Mexico, Costa Rica, & Colombia"
-            price="57.900"
-            text="Oplev farverige kulturer, tropiske regnskove og pulserende byer, mens du rejser gennem Mexico, Costa Rica og Colombia. Tre lande, uendelige oplevelser – klar til at skabe minder for livet."
+            days="16"
+            destination="Japan og Sydkorea"
+            price="53,999"
+            text="Oplev to fascinerende kulturer på ét højskoleophold. Fra Seouls storbyliv og Busans strande til Tokyos energi og Kyotos ro – en rejse fyldt med kultur, fællesskab og eventyr."
           />
         </div>
+      </div>
+      <div class="flex justify-center mt-10">
+        <Button variant="secondary">Se alle destinationer</Button>
       </div>
     </section>
     <section id="reviews" class="bg-off-white py-20 lg:py-25">
