--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -153,10 +153,22 @@ import PopularCard from "../components/PopularCard.astro";
             trip="USA-turen"
           />
           <ReviewCard
-            review="Alt var super godt arrangeret, og man følte sig tryg hele vejen igennem. Jeg vil helt klart anbefale Højskolendk til alle, der overvejer en højskolerejse. Jeg kunne ikke have ønsket mig en bedre tur, og jeg ville til enhver tid gøre det igen!"
-            img="/img/catrine.webp"
-            submitter="Catrine"
-            trip="USA-turen"
+            review="Jeg anbefaler HÖJSKOLENDK fordi man både har mulighed for at bestemme en masse selv hvad man har lyst til at opleve, og at der også allerde er planlagt en masse fede oplevelser. Det er bestemt noget man skulle opleve."
+            img="/img/malthe.webp"
+            submitter="Malthe"
+            trip="Sydamerika-turen"
+          />
+          <ReviewCard
+            review="Opholdet har givet mig venner og oplevelser for livet, der på mange måder skyldes rammerne på turen. Med spændende planlagte programmer og helt ekstremt dygtige rejseledere, kunne man fuldt ud tage indtrykkene til sig, nyde turen i trygge hænder og skabe tætte relationer."
+            img="/img/bjork.webp"
+            submitter="Bjørk"
+            trip="Asien-turen"
+          />
+          <ReviewCard
+            review="Det var helt sikkert den bedste beslutning jeg har taget i mit sabbatår. Rejsen består af et program spækket med fede oplevelser, og nogle vanvittig dygtige rejseledere. Rejsen har skabt minder og venner for livet, og vil uden tvivl anbefale andre at tage afsted med HÖJSKOLENDK."
+            img="/img/sandra.webp"
+            submitter="Sandra"
+            trip="Asien-turen"
           />
           <ReviewCard
             review="Alt var super godt arrangeret, og man følte sig tryg hele vejen igennem. Jeg vil helt klart anbefale Højskolendk til alle, der overvejer en højskolerejse. Jeg kunne ikke have ønsket mig en bedre tur, og jeg ville til enhver tid gøre det igen!"
@@ -165,34 +177,22 @@ import PopularCard from "../components/PopularCard.astro";
             trip="USA-turen"
           />
           <ReviewCard
-            review="Alt var super godt arrangeret, og man følte sig tryg hele vejen igennem. Jeg vil helt klart anbefale Højskolendk til alle, der overvejer en højskolerejse. Jeg kunne ikke have ønsket mig en bedre tur, og jeg ville til enhver tid gøre det igen!"
-            img="/img/catrine.webp"
-            submitter="Catrine"
-            trip="USA-turen"
+            review="Jeg anbefaler HÖJSKOLENDK fordi man både har mulighed for at bestemme en masse selv hvad man har lyst til at opleve, og at der også allerde er planlagt en masse fede oplevelser. Det er bestemt noget man skulle opleve."
+            img="/img/malthe.webp"
+            submitter="Malthe"
+            trip="Sydamerika-turen"
           />
           <ReviewCard
-            review="Alt var super godt arrangeret, og man følte sig tryg hele vejen igennem. Jeg vil helt klart anbefale Højskolendk til alle, der overvejer en højskolerejse. Jeg kunne ikke have ønsket mig en bedre tur, og jeg ville til enhver tid gøre det igen!"
-            img="/img/catrine.webp"
-            submitter="Catrine"
-            trip="USA-turen"
+            review="Opholdet har givet mig venner og oplevelser for livet, der på mange måder skyldes rammerne på turen. Med spændende planlagte programmer og helt ekstremt dygtige rejseledere, kunne man fuldt ud tage indtrykkene til sig, nyde turen i trygge hænder og skabe tætte relationer."
+            img="/img/bjork.webp"
+            submitter="Bjørk"
+            trip="Asien-turen"
           />
           <ReviewCard
-            review="Alt var super godt arrangeret, og man følte sig tryg hele vejen igennem. Jeg vil helt klart anbefale Højskolendk til alle, der overvejer en højskolerejse. Jeg kunne ikke have ønsket mig en bedre tur, og jeg ville til enhver tid gøre det igen!"
-            img="/img/catrine.webp"
-            submitter="Catrine"
-            trip="USA-turen"
-          />
-          <ReviewCard
-            review="Alt var super godt arrangeret, og man følte sig tryg hele vejen igennem. Jeg vil helt klart anbefale Højskolendk til alle, der overvejer en højskolerejse. Jeg kunne ikke have ønsket mig en bedre tur, og jeg ville til enhver tid gøre det igen!"
-            img="/img/catrine.webp"
-            submitter="Catrine"
-            trip="USA-turen"
-          />
-          <ReviewCard
-            review="Alt var super godt arrangeret, og man følte sig tryg hele vejen igennem. Jeg vil helt klart anbefale Højskolendk til alle, der overvejer en højskolerejse. Jeg kunne ikke have ønsket mig en bedre tur, og jeg ville til enhver tid gøre det igen!"
-            img="/img/catrine.webp"
-            submitter="Catrine"
-            trip="USA-turen"
+            review="Det var helt sikkert den bedste beslutning jeg har taget i mit sabbatår. Rejsen består af et program spækket med fede oplevelser, og nogle vanvittig dygtige rejseledere. Rejsen har skabt minder og venner for livet, og vil uden tvivl anbefale andre at tage afsted med HÖJSKOLENDK."
+            img="/img/sandra.webp"
+            submitter="Sandra"
+            trip="Asien-turen"
           />
         </div>
       </div>
