add menu and banner

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -78,6 +78,18 @@
   /*Typografi */
   --font-sans: "General Sans", sans-serif;
   --font-logo: "Titillium Web", sans-serif;
+
+  /* Infinite scroll animation */
+  --animate-infinite-scroll: infinite-scroll 25s linear infinite;
+
+  @keyframes infinite-scroll {
+    from {
+      transform: translateX(0);
+    }
+    to {
+      transform: translateX(-100%);
+    }
+  }
 }
 
 @layer base {
