--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,15 +1,75 @@
 ---
 const pathname = new URL(Astro.request.url).pathname;
 const currentPath = pathname.slice(1); // remove the first "/"
+import Text from "./Text.astro";
 ---
-<header x-data="{ showmenu: false }" class="" >
+
+<header class="fixed inset-x-0 top-0 z-50">
+  <div
+    id="navbar"
+    class="bg-orange flex flex-row justify-between items-center p-4 lg:px-6"
+  >
+    <div class="lg:absolute lg:left-1/2 lg:-translate-x-1/2">
+      <img src="svg/HOJSKOLENDK.svg" alt="HÖJSKOLENDK's logo" />
+    </div>
+    <div id="burger" class="flex flex-row items-center gap-4">
+      <img src="svg/burger.svg" alt="Burgermenu-ikon" />
+      <Text
+        teksttype="p_medium"
+        stylingclasses="hidden lg:block text-white !text-[20px]"
+      >
+        Menu</Text
+      >
+    </div>
+
+    <div class="hidden lg:flex lg:flex-row lg:items-center lg:gap-6">
+      <ul class="flex flex-row gap-6 text-white font-medium text-[20px]">
+        <li>Destinationer</li>
+        <li>Infomøde</li>
+      </ul>
+      <button
+        class="text-[20px] font-medium inline-flex items-center justify-center
+         rounded-[5px] border border-[var(--color-white)]
+         px-[20px] py-[8px]
+         text-[var(--color-orange)] bg-[var(--color-white)]
+         transition-all duration-200
+         hover:bg-transparent hover:text-[var(--color-white)]"
+      >
+        Tilmeld
+      </button>
+    </div>
+  </div>
+  <section
+    class="whitespace-nowrap overflow-x-hidden bg-dark-blue text-white py-2"
+  >
+    <div
+      class="inline-block animate-infinite-scroll whitespace-nowrap [&_span]:mx-6"
+    >
+      <span
+        >4.7 PÅ TRUSTPILOT&nbsp;&nbsp;&nbsp;+25
+        REJSEDESTINATIONER&nbsp;&nbsp;&nbsp;+3000 GLADE KUNDER</span
+      >
+    </div>
+    <div
+      class="inline-block animate-infinite-scroll whitespace-nowrap [&_span]:mx-6"
+      aria-hidden="true"
+    >
+      <span
+        >4.7 PÅ TRUSTPILOT&nbsp;&nbsp;&nbsp;+25
+        REJSEDESTINATIONER&nbsp;&nbsp;&nbsp;+3000 GLADE KUNDER</span
+      >
+    </div>
+  </section>
+</header>
+
+<!-- <header x-data="{ showmenu: false }" class="" >
     <div id="navbar" class="container mx-auto p-4 flex flex-row justify-between items-center">
         <div id="logo" class="">
             <a href="#" class="font-display text-4xl">Astro-Tailwind starter - udvidet udgave E25</a>
         </div>
         <nav id="desktopmenu" class="hidden lg:block">
             <ul class="flex flex-row gap-4">
-                <li class=""><a href="/" class={currentPath === "" ? "italic font-bold" : "italic"}>Forside</a></li><!-- alternativt: lav et <a href="">Link</a>, hvis du ikke vil bruge Link.astro komponenten -->
+                <li class=""><a href="/" class={currentPath === "" ? "italic font-bold" : "italic"}>Forside</a></li>
                 <li class=""><a href="/komponentbibliotek/" class={currentPath === "komponentbibliotek/" ? "italic font-bold" : "italic"}>Komponentbibliotek</a></li>
             </ul>
         </nav>
@@ -25,4 +85,4 @@ const currentPath = pathname.slice(1); // remove the first "/"
             <li class="text-center py-2"><a href="/komponentbibliotek/" class={currentPath === "komponentbibliotek/" ? "italic font-bold" : "italic"}>Komponentbibliotek</a></li>
         </ul>
     </nav>
-</header>
+</header> -->
