add hero-section on index

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -40,11 +40,11 @@ import Button from "../components/Button.astro";
     let i = 0;
     const el = document.getElementById("destination");
     function showDestination(idx) {
-      el.style.opacity = 0;
+      el.style.opacity = "0";
       el.style.transform = "translateY(16px)";
       setTimeout(() => {
         el.textContent = destinations[idx];
-        el.style.opacity = 1;
+        el.style.opacity = "1";
         el.style.transform = "translateY(0)";
       }, 300);
     }
