add intersect on scroll

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,10 @@ import Hero from "../components/Hero.astro";
     <section id="hero">
       <Hero />
     </section>
-    <section id="four_reasons" class="my-20 p-4">
+    <section
+      id="four_reasons"
+      class="my-20 p-4 opacity-0 intersect:opacity-100 intersect:animate-fade"
+    >
       <div
         class="grid grid-cols-2 grid-gap-10 lg:flex lg:justify-between lg:gap-20 lg:flex-row"
       >
@@ -52,7 +55,10 @@ import Hero from "../components/Hero.astro";
         </div>
       </div>
     </section>
-    <section id="intro" class="my-20 p-4">
+    <section
+      id="intro"
+      class="my-20 p-4 opacity-0 intersect:opacity-100 intersect:animate-fade"
+    >
       <div class="lg:grid lg:grid-cols-12 lg:gap-4">
         <Heading
           size="h2"
@@ -99,7 +105,10 @@ import Hero from "../components/Hero.astro";
         />
       </div>
     </section>
-    <section id="popular" class="pb-20 lg:pb-25">
+    <section
+      id="popular"
+      class="pb-20 lg:pb-25 opacity-0 intersect:opacity-100 intersect:animate-fade"
+    >
       <Heading
         size="h1"
         htmlheading="h1"
@@ -138,7 +147,10 @@ import Hero from "../components/Hero.astro";
         <Button variant="secondary">Se alle destinationer</Button>
       </div>
     </section>
-    <section id="reviews" class="bg-off-white py-20 lg:py-25">
+    <section
+      id="reviews"
+      class="bg-off-white py-20 lg:py-25 opacity-0 intersect:opacity-100 intersect:animate-fade"
+    >
       <Heading
         size="h1"
         htmlheading="h1"
@@ -216,7 +228,10 @@ import Hero from "../components/Hero.astro";
         </div>
       </div>
     </section>
-    <section id="sustainability" class="px-4 py-20 lg:pb-20">
+    <section
+      id="sustainability"
+      class="opacity-0 intersect:opacity-100 intersect:animate-fade px-4 py-20 lg:pb-20"
+    >
       <div class="lg:grid lg:grid-cols-12 lg:gap-4">
         <Heading
           size="h2"
@@ -313,7 +328,7 @@ import Hero from "../components/Hero.astro";
     </section>
     <section
       id="info_meeting"
-      class="bg-off-white px-4 py-20 lg:grid lg:grid-cols-12 lg:gap-4 lg:py-25"
+      class="opacity-0 intersect:opacity-100 intersect:animate-fade bg-off-white px-4 py-20 lg:grid lg:grid-cols-12 lg:gap-4 lg:py-25"
     >
       <div
         class="lg:flex lg:flex-col lg:col-start-1 lg:col-end-4 lg:justify-between"
@@ -374,7 +389,7 @@ import Hero from "../components/Hero.astro";
     </section>
     <section
       id="blog_posts"
-      class="px-4 py-20 md:py-25 lg:grid lg:grid-cols-12 lg:gap-4"
+      class="opacity-0 intersect:opacity-100 intersect:animate-fade px-4 py-20 md:py-25 lg:grid lg:grid-cols-12 lg:gap-4"
     >
       <Heading
         size="h1"
